<resources>
    <string name="app_name">DokterKit</string>
    <string name="tunggu">Wait just a moment . . .</string>
    <string name="welcome">Welcome to</string>
    <string name="tekan">Press to add patient data</string>

    <string name="DATA_PASIEN">DATA PASIEN</string>
    <string name="ANAMNESIS">ANAMNESIS</string>
    <string name="PENYEBAB_KASUS">PENYEBAB KASUS</string>
    <string name="PEMERIKSAAN_FISIK">PEMERIKSAAN FISIK</string>
    <string name="PEMERIKSAAN_LABORATORIUM">PEMERIKSAAN LABORATORIUM</string>
    <string name="PROGNOSIS">PROGNOSIS</string>
    <string name="DIAGNOSIS">DIAGNOSIS</string>
    <string name="KOMPLIKASI">KOMPLIKASI</string>
    <string name="MANIFESTASI_KLINIS">MANIFESTASI KLINIS</string>
    <string name="TATALAKSANA">TATALAKSANA</string>

    <string name="save">SAVE</string>
    <string name="export">Export PDF</string>

    <string name="Nama_Pasien">Nama Pasien</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="umur">Umur</string>
    <string name="no_telp">No. Telp</string>
    <string name="alamat">Alamat</string>
    <string name="no_telp_keluarga">No. Telp Keluarga Terdekat</string>

    <string name="riwayat_penyakit_pasien">Riwayat Penyakit Pasien</string>
    <string name="riwayat_penyakit_kel_pasien">Riwayat Penyakit Keluarga Pasien</string>
    <string name="obat">Obat Yang Sudah Dikonsumsi</string>
    <string name="alergi_obat">Alergi Obat</string>
    <string name="alergi_makanan">Alergi Makanan</string>
    <string name="tekanan_darah">Tekanan Darah Terakhir</string>
    <string name="gula_darah">Gula Darah Terakhir</string>

    <string name="penyebab_kasus">Penyebab Kasus</string>

    <string name="nadi">Nadi</string>
    <string name="Tinggi_Badan">Tinggi Badan</string>
    <string name="Berat_Badan">Berat Badan</string>
    <string name="Lingkar_Perut">Lingkar Perut</string>
    <string name="Fisik_Mata">Fisik Mata</string>
    <string name="cm">Cm.</string>
    <string name="kg">Kg.</string>

    <string name="Hemoglobin">Hemoglobin</string>
    <string name="Eritrosit">Eritrosit</string>
    <string name="Leukosit">Leukosit</string>
    <string name="Trombosit">Trombosit</string>
    <string name="nilai_rujut">NILAI RUJUKAN</string>
    <string name="nilai_rujuk_hemoglobin">Hemoglobin: 11.7 – 15.5</string>
    <string name="nilai_rujuk_eritrosit">Eritrosit: 3.8 – 5.2</string>
    <string name="nilai_rujuk_leukosit">Leukosit: 3.6 – 11.0</string>
    <string name="nilai_rujuk_trombosit">Trombosit: 150 – 440</string>

    <string name="Keluhan_Pasien">Keluhan Pasien</string>

    <string name="diagnosa">Diagnosis</string>
    <string name="Komplikasi">Komplikasi</string>
    <string name="m.fisik">Manifestasi Klinis</string>
    <string name="tatalaksana">Tatalaksana</string>

    <string name="files">File</string>
    <string name="home">Home</string>
    <string name="gizi">Gizi</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>