<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDF7"
    tools:context=".PemeriksaanFisikActivity">

    <Button
        android:id="@+id/pFisik_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ImageView9"
        android:layout_width="414dp"
        android:layout_height="153dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/for_p__fisik_removebg_preview__1_" />

    <ImageButton
        android:id="@+id/pFisik_imageView_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="415dp"
        android:layout_height="512dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageView9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout12"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pFisik_textInput_nadi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:hint="@string/nadi"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout13"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout12">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pFisik_textInput_tinggi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:hint="@string/Tinggi_Badan"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cm"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout13"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout13"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout13" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cm"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout15"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout15"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout15" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout14"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout13">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pFisik_textInput_berat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:hint="@string/Berat_Badan"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/kg"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout14"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout14"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout14" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout15"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout14">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pFisik_textInput_lingkarPerut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:hint="@string/Lingkar_Perut"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pFisik_textInput_fisikMata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:hint="@string/Fisik_Mata" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>